# safeagent-gov

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  OPEN_SOURCE_NOTICE.md  PROJECT_MAP.md  README.md  next_solve_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: technical-task.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  release-macos.yml  release.yml
agent_demo/: __init__.py
agent_demo/adapters/: __init__.py  dify.py  external_agent.py
agent_demo/langgraph_agent/: __init__.py  agent.py  nodes.py  orchestrator.py
agent_demo/planners/: __init__.py  deterministic.py  factory.py  model_gateway.py  openai_compatible.py  protocol.py  resilience.py  tool_schemas.py  validation.py
agent_demo/scenarios/: __init__.py  catalog.py  catalog.yaml
backend/: __init__.py  auth.py  database.py  desktop_boot.py  main.py  rate_limit.py  schemas.py
backend/api/: agent_api.py  audit_api.py  auth_api.py  eval_api.py  graphify_api.py  mcp_api.py  model_api.py  policy_api.py  risk_api.py  router_api.py  skill_api.py  skill_runtime_api.py  task_api.py  tool_api.py
backend/core/: __init__.py  evaluator.py
backend/policies/: system_policy.md
backend/tests/: test_agent_audit.py  test_api.py  test_evaluator.py  test_mcp_guard.py  test_prompt_shield.py  test_skill_scan.py
benchmarks/: __init__.py
configs/: graphify_registry.yaml  model_gateway.yaml
desktop/: README.md  package-lock.json  package.json
desktop/linux/: README.md  build-linux.sh  package-appimage.sh  package-deb.sh  tauri.linux.conf.json
desktop/mac/: README.md  (+5 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/src/: lib.rs  main.rs
eval/: __init__.py
frontend-vue/: components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
integrations/: __init__.py
mcp/: __init__.py
release/: README.md
research_technology/: README.md  __init__.py
safeagent_gov/: __init__.py  audit.py  auth.py  contracts.py  data_governance.py  desktop_boot.py  desktop_platform.py  errors.py  input_security.py  mcp_manifest.py  paths.py  planning.py  supply_chain.py
scripts/: backup_restore.py  build_desktop.py  check_markdown_links.py  check_repository_index.py  generate_technical_manifest.py  setup_uv_env.ps1  setup_uv_env.py  setup_uv_env.sh  uv_run.sh
skills/: __init__.py
tests/: test_agent_orchestration.py  test_agentseceval_contracts.py  test_audit_projections.py  test_authentication.py  test_desktop_platform.py  test_desktop_runtime.py  test_distributed_recovery_runner.py  test_distributed_task_runtime.py  test_ephemeral_model_api.py  test_external_agent_integration.py  test_graphify.py  test_mcp_manifest_scan.py  test_model_gateway.py  test_planners.py  test_promptshield_benchmark.py  test_promptshield_calibration.py  test_public_contracts.py  test_public_errors.py  test_repository_contracts.py  test_repository_quality.py  test_resilience.py  test_safe_router.py  test_skill_runtime.py  test_task_runtime.py  test_task_runtime_config.py
(+340 files in other folders)
