[package]
name = "safeagent-gov-desktop"
version = "0.1.0"
description = "GovSafeAgent cross-platform desktop host"
authors = ["GovSafeAgent contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "safeagent_gov_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-shell = "=2.3.5"
